fixed cards not showing full bottom border when containing centered icon Added placeholder image

--- a/src/stylesheets/components/_cards.scss
+++ b/src/stylesheets/components/_cards.scss
@@ -119,8 +119,7 @@
 }
 
 .card-center {
-  margin: 0 auto;
-  display: table;
+  text-align: center;
 }
 
 //Extra functionality for cards that can be implemented later on - from USPTO        
